# ai-search

./: .env  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/chat/: agent.py  router.py  schemas.py
backend/app/example/: models.py  router.py  schemas.py
frontend/: package-lock.json  package.json
frontend/app/: data.ts  globals.css  layout.tsx  page.tsx
frontend/app/improvements/: page.tsx
frontend/app/social/: page.tsx
frontend/app/spy/: page.tsx
frontend/components/: app-sidebar.tsx  data-table.tsx  nav-main.tsx  section-cards.tsx
frontend/components/ui/: sidebar.tsx
